src/snapshots/barbaroja__mov__tests__instance_all_basic_moves-11.snap
---
source: src/mov.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RUF (0) is at RUF,
        LDB (0) is at LUF,
        RDF (0) is at RDF,
        LUB (0) is at LDF,
        RUB (0) is at RUB,
        LDF (0) is at LUB,
        RDB (0) is at RDB,
        LUF (0) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        DF (✓) is at DF,
        UB (✓) is at UB,
        DB (✓) is at DB,
        FR (✓) is at FR,
        BR (✓) is at BR,
        BL (✓) is at FL,
        FL (✓) is at BL,
        RU (✓) is at RU,
        LD (✓) is at LU,
        RD (✓) is at RD,
        LU (✓) is at LD,
    ],
}
