src/snapshots/barbaroja__mov__tests__instance_all_basic_moves-13.snap
---
source: src/mov.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RUF (0) is at RUF,
        LUF (0) is at LUF,
        LDF (1) is at RDF,
        LDB (2) is at LDF,
        RUB (0) is at RUB,
        LUB (0) is at LUB,
        RDF (2) is at RDB,
        RDB (1) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        LD (✓) is at DF,
        UB (✓) is at UB,
        RD (✓) is at DB,
        FR (✓) is at FR,
        BR (✓) is at BR,
        FL (✓) is at FL,
        BL (✓) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        DF (✓) is at RD,
        DB (✓) is at LD,
    ],
}
