src/snapshots/barbaroja__mov__tests__instance_all_basic_moves-15.snap
---
source: src/mov.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RUF (0) is at RUF,
        LUF (0) is at LUF,
        RDB (1) is at RDF,
        RDF (2) is at LDF,
        RUB (0) is at RUB,
        LUB (0) is at LUB,
        LDB (2) is at RDB,
        LDF (1) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        RD (✓) is at DF,
        UB (✓) is at UB,
        LD (✓) is at DB,
        FR (✓) is at FR,
        BR (✓) is at BR,
        FL (✓) is at FL,
        BL (✓) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        DB (✓) is at RD,
        DF (✓) is at LD,
    ],
}
