src/snapshots/barbaroja__mov__tests__instance_all_basic_moves-17.snap
---
source: src/mov.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RUF (0) is at RUF,
        LUF (0) is at LUF,
        RDF (0) is at RDF,
        LDF (0) is at LDF,
        LDB (0) is at RUB,
        RDB (0) is at LUB,
        LUB (0) is at RDB,
        RUB (0) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        DF (✓) is at DF,
        DB (✓) is at UB,
        UB (✓) is at DB,
        FR (✓) is at FR,
        BL (✓) is at BR,
        FL (✓) is at FL,
        BR (✓) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        RD (✓) is at RD,
        LD (✓) is at LD,
    ],
}
